project/stage/tests/reject/bad_statements/bad_if_else/compound_assignment_in_condition.ul
int F() {
    if(  temp[0]=0 ) { } else {}
}
